<resources>
    <string name="app_name">Shot Video</string>
    <string name="action_settings">Settings</string>

    <string name="two_click_exit_app">One more step to quit</string>
    <string name="load_failed">failed, try to click again</string>
    <string name="load_more_txt">loading...</string>
    <string name="no_more_videos">no video...</string>

    <string name="net_easy_video">Channel Fun</string>
    <string name="ttkb_video">Channel Hot</string>
    <string name="ifeng_video">Channel No</string>
    <string name="share_app_title">Share App</string>
    <string name="share_app">Share</string>
    <string name="about">About</string>

    <string name="about_author">Shot Inc.</string>
    <string name="about_blog">for more</string>
    <string name="about_contact">Get another shot</string>
    <string name="about_project">fun</string>
    <string name="about_project_desc">.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
